--- a/src/Components/Header/style.css
+++ b/src/Components/Header/style.css
@@ -5,18 +5,20 @@
   border-bottom: 1px solid #0000002b;
   z-index: 10;
 }
+
 .nav-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
 }
+
 .logo .title {
   font-weight: bold;
   font-size: 20px;
 }
 
-.left-menu > ul {
+.left-menu>ul {
   list-style: none;
   display: flex;
   align-items: center;
@@ -54,4 +56,9 @@
   padding: 5px 10px;
   outline: none;
   border: 1px solid gray;
+}
+
+.cart-icon-Link {
+  color: gray;
+  font-size: 20px;
 }
