--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -11,8 +11,7 @@
   font-weight: 400;
 }
 
-.page-filters {
-}
+.page-filters {}
 
 .all-books {
   display: flex;
@@ -33,9 +32,12 @@
 }
 
 .book-card .card-header img {
-  max-width: 400px;
+  max-width: 350px;
   max-height: 300px;
   border-radius: 20px 20px 0px 0px;
+  width: 100%;
+  display: block;
+  margin: auto;
 }
 
 .book-card .card-footer {
@@ -100,6 +102,7 @@
   margin-top: 10px;
   gap: 50px;
 }
+
 .cart-icon-button {
   background-color: #2d9cdb;
   color: white;
@@ -109,6 +112,7 @@
   border-radius: 50px;
   width: 100%;
 }
+
 .cart-icon-button:hover {
   color: #2d9cdb;
   background-color: white;
@@ -131,4 +135,27 @@
   color: white;
   border: 1px solid white;
   transition: all ease-in-out 0.3s;
+}
+
+.card-title {
+  position: absolute;
+  top: 10%;
+  right: 25%;
+  font-size: xx-large;
+  font-weight: bold;
+}
+
+.card-author {
+  position: absolute;
+  top: 20%;
+  right: 30%;
+  display: block;
+  color: black;
+  font-size: 20px;
+}
+
+.go-back-btn {
+  position: absolute;
+  bottom: 6%;
+  right: 35%;
 }
