--- a/src/Home/style.css
+++ b/src/Home/style.css
@@ -11,7 +11,8 @@
   font-weight: 400;
 }
 
-.page-filters {}
+.page-filters {
+}
 
 .all-books {
   display: flex;
@@ -60,7 +61,7 @@
 .book-card .card-footer .price-rating-box {
   display: flex;
   justify-content: space-between;
-  align-items: center;
+  align-items: flex-end;
 }
 
 .book-card .card-footer .price-rating-box .price-box {
@@ -101,40 +102,6 @@
   align-items: center;
   margin-top: 10px;
   gap: 50px;
-}
-
-.cart-icon-button {
-  background-color: #2d9cdb;
-  color: white;
-  padding: 10px 40px;
-  font-size: 20px;
-  border: 1px solid white;
-  border-radius: 50px;
-  width: 100%;
-}
-
-.cart-icon-button:hover {
-  color: #2d9cdb;
-  background-color: white;
-  border: 1px solid #2d9cdb;
-  transition: all ease-in-out 0.3s;
-}
-
-.view-icon-button {
-  color: #2d9cdb;
-  border: 1px solid #2d9cdb;
-  padding: 0px 0px;
-  border-radius: 50px;
-  padding: 10px 40px;
-  font-size: 20px;
-  width: 100%;
-}
-
-.view-icon-button:hover {
-  background-color: #2d9cdb;
-  color: white;
-  border: 1px solid white;
-  transition: all ease-in-out 0.3s;
 }
 
 .card-title {
